--- a/src/routes/Detail.scss
+++ b/src/routes/Detail.scss
@@ -11,7 +11,7 @@
         .loading{font-size: 5rem;}
     }
     .movies{
-        .title{text-align: center; margin-bottom: 20px; color: rgb(106, 101, 101); font-size: 1.6rem; font-weight: 400; text-shadow: 1px 1px 8px rgba(0,0,0,.4);}
+        .title{text-align: center; margin-bottom: 20px; color: rgb(20, 19, 19); font-size: 2rem; font-weight: 400; text-shadow: 1px 1px 2px rgba(43, 41, 41, 0.4);}
         .img-box{text-align: center;
             img{max-width: 400px; width: 100%;box-shadow: 0 10px 40px -12px rgba(50,50,93,.6), 0 10px 36px -18px rgba(0,0,0,.6);}
         }
