--- a/src/component/Movie.scss
+++ b/src/component/Movie.scss
@@ -1,11 +1,18 @@
 .movie{
     background: #fff;
+    position: relative;
     margin-bottom: 70px;
     font-weight: 300;
     padding: 20px;
     border-radius: 5px;
     color: #adaeb9;
     box-shadow: 0 13px 27px -5px rgba(50,50,93,.25), 0 8px 16px -8px rgba(0,0,0,.3);
+    transition: .3s ease-in-out;
+    transform: translateY(0);
+    &:hover{
+        transform: translateY(-5%);
+        box-shadow: 0 13px 27px 10px rgba(50,50,93,.6), 0 8px 16px -8px rgba(0,0,0,.6);
+    }
     a{text-decoration: none; color: #2c2c2c;}
     img{
         position: relative;
