--- a/src/routes/Detail.scss
+++ b/src/routes/Detail.scss
@@ -1,14 +1,22 @@
 .movie-detail{
     width: 80%;
     margin-top: 50px;
-    .loadings{
-        text-align: center;
+    .loader{
         display: flex;
         align-items: center;
         justify-content: center;
         height: 100vh;
-        color: rgb(221, 127, 127);
-        .loading{font-size: 5rem;}
+        color: rgb(81, 42, 42);
+        .circle{
+            background: rgb(46, 12, 12);
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            margin: 50px;
+            animation: bounce .5s ease-in infinite;
+            &:nth-of-type(2){animation-delay: .1s;}
+            &:nth-of-type(3){animation-delay: .2s;}
+        }
     }
     .movies{
         .title{text-align: center; margin-bottom: 20px; color: rgb(20, 19, 19); font-size: 2rem; font-weight: 400; text-shadow: 1px 1px 2px rgba(43, 41, 41, 0.4);}
@@ -50,4 +58,9 @@
         }
         
     }
+}
+@keyframes bounce {
+    0%{transform: translateY(0);}
+    50%{transform: translateY(-50px);}
+    100%{transform: translateY(0);}
 }
