--- a/src/routes/Home.scss
+++ b/src/routes/Home.scss
@@ -2,10 +2,21 @@
 .container{
     .loader{
         display: flex;
-        height: 100vh;
         align-items: center;
         justify-content: center;
-        &_text{font-size: 30px; color: rgb(114, 59, 59); text-shadow: 1px 2px 2px rgba(50,50,93,.25);}
+        height: 100vh;
+        width: 80%;
+        color: rgb(81, 42, 42);
+        .circle{
+            background: rgb(46, 12, 12);
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            margin: 50px;
+            animation: a1 .9s ease-in infinite;
+            &:nth-of-type(2){animation-delay: .2s;}
+            &:nth-of-type(3){animation-delay: .4s;}
+        }
     }
     .movies{
         margin: 50px 0;
@@ -25,4 +36,9 @@
             width: 100%;
         }
     }
+}
+@keyframes a1 {
+    0%{transform: translateY(0);}
+    50%{transform: translateY(-130px);}
+    100%{transform: translateY(0);}
 }
